# sentinelsearcher

./: LICENSE  README.md  pyproject.toml
.github/workflows/: sentinel-searcher-callable.yml  sentinel-searcher.yml
examples/: awards.json  sentinel.config.yaml
src/sentinelsearcher/: .env-example  __init__.py  config.py  main.py  sentinel.config.yaml
src/sentinelsearcher/examples/: news.json
