[project]
name = "sentinelsearcher"
version = "0.1.0"
description = "A simple way to browse the web and retrieve a json schema"
readme = "README.md"
authors = [
    { name = "Matheus Kunzler Maldaner", email = "matheus@sisnema.com.br" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
